# m1-transcode

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_IAMF_INTEGRATION.md  _build_deploy_linux-arm.sh  _build_deploy_linux-x64.sh  _build_deploy_macos.sh  _build_deploy_win.bat  iamf_validator.cpp  setup.sh
cmake/: FindLibFLAC.cmake  FindLibMp3Lame.cmake  FindLibOgg.cmake  FindLibOpus.cmake  FindLibSndFile.cmake  FindLibVorbis.cmake  FindMPG123.cmake  FindSndio.cmake  Findmp3lame.cmake  fetchLibADM.cmake  fetchLibBW64.cmake  fetchLibIAMF.cmake  fetchLibSndFile.cmake  fetchM1SDK.cmake
m1-transcode_osx/m1-transcode.xcodeproj/: project.pbxproj
m1-transcode_osx/m1-transcode.xcodeproj/xcshareddata/xcschemes/: m1-transcode.xcscheme
scripts/: _build_deploy_linux-arm.sh  _build_deploy_linux-x64.sh  _build_deploy_macos.sh  _build_deploy_win.bat  _test_macos.sh  packaging.sh  setup.sh  setup_cmake.sh
src/: Info.plist  adm_metadata.h  main.cpp  test_MatrixConvert.cpp
src/adapters/: ADMParse.cpp  ADMParse.h  iamf.cpp  iamf.h
